# metasp

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: deploy.yml  doc.yml
benchmarks/: README.md  eval-all.sh  gen-all.sh  plot.py  plot_comparison.py
benchmarks/del/: RESULTS.md  benchmarks.sh  results_elevator_out.txt
benchmarks/instances/del/: elevator-metasp-control.lp  elevator-metasp.lp  elevator-telingo-control.lp  elevator-telingo.lp
benchmarks/mel/: RESULTS_JOBSHOP.md  RESULTS_MAPF.md
benchmarks/plots/: generate_plots.sh  plot_comparison.py  plot_time_stime.py
benchmarks/programs/: clingo-latest  metasp-1  runlim  telingo-1
benchmarks/resultparsers/: rp_tmp.py
benchmarks/results/: metasp-del.xlsx  metasp-del.xml  metasp-tel.xlsx  metasp-tel.xml  telingo-del.xlsx  telingo-del.xml  telingo-tel.xlsx  telingo-tel.xml
benchmarks/runscripts/: runscript-metasp-del.xml  runscript-metasp-tel.xml  runscript-telingo-del.xml  runscript-telingo-tel.xml
benchmarks/tel/: README.org  config.yml  metasp_results.csv  metasp_results_no_telingo_timeout.csv  metasp_results_ricochet_v2.csv  metasp_results_v2.csv  run_metasp.sh  run_metasp_no_telingo_timeout.sh  run_telingo.sh  run_telingo_fixed_horizon.sh  run_telingo_lambda.sh  run_telingo_v2.sh  telingo_lambda_results.csv  telingo_results.csv
benchmarks/tel/encodings/: hanoi-metasp.lp  hanoi-telingo.lp  nomystery-telingo.lp  ricochetrobot-metasp.lp  ricochetrobot-telingo.lp  sokoban-telingo.lp  visitall-metasp.lp  visitall-telingo.lp
benchmarks/tel/horizons/: 0007-hanoi_tower-60-0  0008-hanoi_tower-60-0  0012-visitall-36-1  0021-hanoi_tower-40-0  0034-nomystery-64-0  0047-hanoi_tower-120-0  0050-hanoi_tower-120-0  0094-labyrinth-17-0  0096-sokoban-36-1  (+2 more)
benchmarks/templates/: seq-generic.sh
docs/: SUMMARY.md  getting_started.md  index.md
docs/community/: CHANGES.md  DEVELOPMENT.md  help.md  index.md
docs/examples/: bool.md  del.md  delingo.md  index.md  mel.md  melingo.md  tel.md  telingo.md
docs/reference/: controls.md  index.md  log.md  print.md  semantics.md  solver.md  syntax.md  test.md  ui.md
docs/use/: help.md  installation.md  quick-start.md
examples/: metasp.yml
examples/bool/: README.md  config.yml  semantics.lp  syntax.lp
examples/del/: README.md  config.yml  flc.lp  semantics.lp  syntax.lp  ui.lp
examples/delingo/: README.md  basic-head.lp  elevator-preprocessed.lp  elevator-proprocessed.lp  hanoi.lp  lights-encoding-preprocessed.lp  lights-preprocessed.lp  out  semantics.lp  syntax-facts.lp  syntax.lp  ui.lp  working-head.lp
examples/mel/: README.md  config.yml  print_functions.py  restricted-limit.lp  semantics-old.lp  semantics.lp  syntax.lp  ui.lp
examples/melingo/: README.md  dentist-prepocessed.lp  forging-robot-preprocessed.lp  forging-robots-preprocessed.lp  lights-encoding-preprocessed.lp  print_functions.py  semantics.lp  syntax-facts.lp  syntax.lp
examples/num/: config.yml  semantics.lp  syntax.lp
examples/tel/: README.md  config.yml  semantics.lp  syntax.lp  ui.lp
examples/tel-full/: semantics.lp  syntax.lp
examples/telingo/: README.md  lights-encoding copy.lp  lights-encoding-preprocessed.lp  lights-encoding.lp  metasp.yml  mini-preprocessed.lp  semantics.lp  syntax-facts-until-body.lp  syntax-facts.lp  syntax-mini-facts.lp  syntax-mini.lp  syntax-util-body.lp  syntax.lp  sytax-mini.lp
examples/thtc/: example-mini.lp  example-paper.lp  print_functions.py  semantics copy.lp  semantics.lp  syntax.lp  ui.lp
src/metasp/: __init__.py  __main__.py  app.py  base_solver.py  clorm_db.py  controls.py  formula_processing.py  grammar.py  preprocess.py  printing.py  reifier.py  system.py
tests/: test_aspen.py  test_cli.py  test_extensions.py  test_main.py
(+987 files in other folders)
